Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@
     height: 48px;
     background-color: #fff;
     position: fixed;
-    z-index: 50;
   }
 
   .navbar {
